# shop-api

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  app.py  pyproject.toml  requirements.txt
db/: database.py  models.py
src/: config.py
src/api/: app.py
src/api/repository/: __init__.py  base_repository.py  order_repository.py  product_repository.py  user_repository.py
src/api/services/: __init__.py  invoicing.py  schema.py
src/api/services/orders/: endpoints.py  schema.py
src/api/services/products/: endpoints.py  schema.py
src/api/services/users/: endpoints.py  schema.py
src/db/: database.py  models.py
src/db/migrations/: env.py
src/db/migrations/versions/: 0152fb6f369a_weight_now_nullable.py  25b560b05038_products_and_users_now_have_boolean_.py  55f4d3b54ec9_initial.py  5e8827f4aa60_user_s_second_name_and_username_are_.py  90cc19960065_order_info.py  d978178c2f10_order_date_info.py  eb518900b581_order_now_can_contain_multiple_products_.py
src/utils/: __init__.py  singleton.py
