[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "1.4.46"
asyncpg = "0.27.0"
fastapi = "0.86.0"
uvicorn = "0.19.0"
alembic = "1.9.4"
python-dotenv = "0.21.1"
httpx = "^0.23.3"
python-multipart = "^0.0.6"
pillow = "^9.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
